Improved event bytecode transformations, improved javadocs, updated to spigot-api 1.16, asm 8 and included scala 2.13.3